--- a/LivroMente_FRONT/src/app/Views/carrinho/carrinho.component.html
+++ b/LivroMente_FRONT/src/app/Views/carrinho/carrinho.component.html
@@ -5,7 +5,7 @@
             <div style="width: 310px; left: 144px; top: 20px; position: absolute; color: #82A8D9; font-size: 40px; font-family: Glory; font-weight: 200; word-wrap: break-word">Livro&Mente</div>
             <li><a href="home">Home</a></li>
             <li><a href="livros">Livros</a></li>
-            <li><a href="vendas">Venda</a></li>
+            <li><a href="cadastro-livro">Venda</a></li>
             <li><a href="dominio">Livros Grátis</a></li>
             <li><a href="categoria">Categoria</a></li>
             <li><a href="carrinho">Carrinho</a></li>
@@ -25,7 +25,7 @@
                             <th>Quantidade</th>
                             <th>Total</th>
                             <th>-</th>
-                           </tr> 
+                           </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -67,4 +67,4 @@
             </aside>
             </div>
         </main>
-</body>          
+</body>
