--- a/LivroMente_FRONT/src/app/Views/home/home.component.css
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.css
@@ -1,66 +1,337 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-body{
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins';
-}
-.menu{
-    list-style-type: none;
-    font-size: 20px;
-    display: flex;
-    justify-content: right;
-    /* position: fixed; */
-}
-.menu ul{
-    list-style-type: none;
-    background-color: transparent;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+
+main {
+  padding: 0px 150px 0px 150px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
- .menu ul li{
-    display: inline;
-  } 
-
-.menu ul li a{
-    color: #000;
-    text-decoration: none;
-    padding: 15px;
-    display: inline-block;
-}
-.menu ul li a:hover{
-    color: #849A8A;
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
+.page-top {
+  position: relative;
+  margin: 2vw 0 0 0;
 }
 
-img.pequena{
-    width: 7%;
-    justify-content: left;
-    cursor: pointer;
-    transition: all 0.3s;
+.page-top img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  margin-top: 0;
+  width: 100%;
+  max-width: 500px;
 }
 
-img.pequena:hover{
-    -webkit-filter: blur(2px);
-    filter: blur(2px);
+.main-text {
+  color: #000;
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: -3.3px;
+  text-transform: capitalize;
+  max-width: 500px;
+  padding: 8vw 0 0 0;
+  margin-bottom: 2vw;
 }
 
-.bnt-login{
-    border-radius: 9px;
-    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.2), 0 3px 3px 0 rgba(0,0,0,0.19);
-    border: 5px solid rgba(132, 154, 138, 0.20);
-    background: #849A8A;
-    font-size: 20px;
-    color: #fff;
-    cursor: pointer;
-    margin:49px 30px 30px;
-    margin-top: 5px;
-    padding: 7px;
+.description {
+  color: rgba(0, 0, 0, 0.4);
+  text-align: justify;
+  font-size: 11.5px;
+  font-weight: 600;
+  letter-spacing: -1px;
+  line-height: 18px;
+  text-transform: capitalize;
+  max-width: 300px;
+  width: 100%;
 }
-.bnt-login:hover {
-    background-color: rgb(136, 197, 138); 
-  } 
+
+.destaques {
+  background: #849a8a;
+  color: white;
+  font-weight: 800;
+  font-size: 13px;
+  border: transparent;
+  width: 90px;
+  height: 40px;
+  border-radius: 6px;
+  outline: 3px solid rgba(132, 154, 138, 0.2);
+  cursor: pointer;
+}
+
+.destaques:hover {
+  background: rgb(109, 130, 115);
+  transition: 0.2s;
+}
+
+.destaques:active {
+  background: #425146;
+}
+
+.sale {
+  margin: 0vw 0 0 1.5vw;
+  background: #ffffff;
+  color: #849a8a;
+  font-weight: 800;
+  font-size: 13px;
+  border: transparent;
+  width: 90px;
+  height: 40px;
+  border-radius: 6px;
+  outline: 3px solid rgba(132, 154, 138, 0.2);
+  cursor: pointer;
+}
+
+.sale:hover {
+  background: rgb(231, 231, 231);
+  transition: 0.2s;
+}
+
+.sale:active {
+  background: rgb(208, 208, 208);
+}
+
+.button-nav {
+  margin: 1.5vw 0 0 0;
+}
+
+.color {
+  color: #849a8a;
+}
+
+.page-mid {
+  padding: 25vh 0 0 0;
+}
+
+.product-category {
+  color: #000;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.product {
+  margin: 10px -8px;
+  padding: 0 0;
+}
+
+.slider-wrap {
+  position: relative;
+  overflow: hidden;
+  height: 300px;
+  margin-bottom: -40px;
+}
+
+.slider-main {
+  display: flex;
+  position: absolute;
+}
+
+.slider-fade {
+  z-index: 1;
+  position: absolute;
+  right: -30px;
+  width: 100px;
+  height: 300px;
+  top: -30px;
+  background: linear-gradient(to right, rgb(255, 255, 255), white);
+  filter: blur(15px);
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 180px;
+  height: 240px;
+  background-color: #d9d9d9;
+  position: relative;
+  margin: 0 8px;
+  border-radius: 4px;
+  border: 0.5px solid rgb(194, 194, 194);
+}
+
+.product-info {
+  min-width: 100%;
+  min-height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+  background-color: #ffffff;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.product-text {
+  margin-left: 0.5vw;
+}
+
+.product-buy {
+  margin-right: 0.5vw;
+  height: 70%;
+  width: 40%;
+  border-radius: 5px;
+  border: 1px solid;
+  background-color: #849a8a;
+  color: white;
+  font-weight: 600;
+}
+
+.prev {
+  position: absolute;
+  left: 30px;
+  top: 40%;
+  transform: translate(-50%, -50%);
+}
+
+.next {
+  cursor: pointer;
+  background: none;
+  border: none;
+  overflow: visible;
+  position: absolute;
+  right: 10px;
+  top: 35%;
+  transition: 0.09s;
+  width: 25px;
+  height: 20px;
+  z-index: 2;
+}
+
+.next:active {
+  transform: scale(0.9);
+}
+
+.next img {
+  width: 100%;
+  height: 100%;
+}
+
+.offer-card {
+  display: flex;
+}
+
+.left-card {
+  border-radius: 14px;
+  width: 75%;
+  height: 35vh;
+  border: 1px solid rgb(0, 0, 0);
+  overflow: hidden;
+}
+
+/* .left-card img {
+    right: -100px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  } */
+
+.right-card {
+  border-radius: 14px;
+  margin: 0 0 0 12px;
+  width: 25%;
+  height: 35vh;
+  outline: 1px solid rgb(0, 0, 0);
+}
+
+.general-products {
+  display: flex;
+}
+
+.filter {
+  padding: 0 7vw 0 0;
+}
+
+.general-books-title {
+  margin: 7vh 0 2vh 0;
+  color: #000;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.category {
+  display: flex;
+  flex-direction: column;
+}
+
+.category-title {
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 2vh 0 0 0;
+}
+
+.category-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.category-text-class {
+  margin: 0.5vw;
+}
+
+.categorys {
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #000000;
+  background-color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.categorys:checked {
+  background-color: rgb(0, 0, 0);
+}
+
+.category-design {
+  display: flex;
+  align-items: center;
+}
+
+.products-general {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 7vw 0 0 0;
+}
+
+.item-general {
+  position: relative;
+  width: 210px;
+  height: 280px;
+  background-color: #d9d9d9;
+  position: relative;
+  margin: 0 8px;
+  border-radius: 7px;
+  margin-bottom: 2vh;
+  border-radius: 4px;
+  border: 1.2px solid rgb(194, 194, 194);
+  overflow: hidden;
+}
+
+.item-general .product-info {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.product-image {
+  height: 100px;
+  margin-bottom: 10vh;
+}
+
+.product-image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  box-sizing: border-box;
+}
