--- a/LivroMente_FRONT/src/app/Views/home/home.component.css
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 
+*{
+  box-sizing: border-box;
+}
+
+
 main {
+  display: flex;
+  flex-direction: column;
+  gap: 10em;
   padding: 0px 150px 0px 150px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -29,7 +37,7 @@ main {
   letter-spacing: -3.3px;
   text-transform: capitalize;
   max-width: 500px;
-  padding: 8vw 0 0 0;
+  /* padding: 8vw 0 0 0; */
   margin-bottom: 2vw;
 }
 
@@ -43,6 +51,13 @@ main {
   text-transform: capitalize;
   max-width: 300px;
   width: 100%;
+}
+
+.products-principal{
+  gap: 1.5em;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5em;
 }
 
 .destaques {
@@ -68,7 +83,6 @@ main {
 }
 
 .sale {
-  margin: 0vw 0 0 1.5vw;
   background: #ffffff;
   color: #849a8a;
   font-weight: 800;
@@ -79,6 +93,7 @@ main {
   border-radius: 6px;
   outline: 3px solid rgba(132, 154, 138, 0.2);
   cursor: pointer;
+  margin-left: 1em;
 }
 
 .sale:hover {
@@ -98,10 +113,6 @@ main {
   color: #849a8a;
 }
 
-.page-mid {
-  padding: 25vh 0 0 0;
-}
-
 .product-category {
   color: #000;
   font-size: 24px;
@@ -112,7 +123,7 @@ main {
 
 .product {
   margin: 10px -8px;
-  padding: 0 0;
+  /* padding: 0 0; */
 }
 
 .slider-wrap {
@@ -132,23 +143,30 @@ main {
   position: absolute;
   right: -30px;
   width: 100px;
-  height: 300px;
+  height: 500%;
   top: -30px;
   background: linear-gradient(to right, rgb(255, 255, 255), white);
   filter: blur(15px);
 }
 
 .item {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  position: relative;
   width: 180px;
-  height: 240px;
+  height: 300px;
   background-color: #d9d9d9;
   position: relative;
   margin: 0 8px;
+  border-radius: 7px;
+  margin-bottom: 2vh;
   border-radius: 4px;
-  border: 0.5px solid rgb(194, 194, 194);
+  border: 1.2px solid rgb(194, 194, 194);
+  overflow: hidden;
+}
+
+.item .product-image {
+  top: 0;
+  position: relative;
+  height: 240px;
 }
 
 .product-info {
@@ -238,11 +256,12 @@ main {
 }
 
 .general-products {
-  display: flex;
+ display: flex;
+ gap: 127px;
 }
 
 .filter {
-  padding: 0 7vw 0 0;
+  /* padding: 0 7vw 0 0; */
 }
 
 .general-books-title {
@@ -297,15 +316,16 @@ main {
 }
 
 .products-general {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 7vw 0 0 0;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  padding-top: 6.5em;
+  /* padding: 7vw 0 0 0; */
 }
 
 .item-general {
   position: relative;
   width: 210px;
-  height: 280px;
+  height: 320px;
   background-color: #d9d9d9;
   position: relative;
   margin: 0 8px;
@@ -317,21 +337,82 @@ main {
 }
 
 .item-general .product-info {
-  position: absolute;
+  position: relative;
   width: 100%;
+  height: 30px;
   bottom: 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
 .product-image {
-  height: 100px;
-  margin-bottom: 10vh;
+  top: 0;
+  position: relative;
+  height: 260px;
+
+  & img{
+    height: 100%;
+    width: 100%;
+  }
 }
 
+/* 
 .product-image img{
   width: 100%;
-  height: 100%;
   object-fit: cover;
   box-sizing: border-box;
+} */
+
+.page-footer{
+  padding: 2vw 3vw 2vw 3vw;
+  display: flex;
+  margin: 56vh 0 0 0;
+  background-color: #000000;
+  width: 100%;
+  height: 25vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.footer-left{
+  display: flex;
+  gap: 3em  ;
+  width: 50vw;
+}
+
+.footer-resources-title{
+  margin: 0;
+  color: rgb(174, 174, 174);
+  font-weight: 600;
+}
+
+.footer-resources{
+  display: flex;
+  flex-direction: column;
+  color:rgb(174, 174, 174);
+  margin: 0;
+  font-size: 12px;
+}
+
+.resources{
+  color: rgb(174, 174, 174);
+  text-decoration: none;
+}
+
+.resources:hover{
+  color: rgb(255, 255, 255);
+  transition: .3s;
+}
+
+.footer-right{
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1em;
+  width: 50vw;
+}
+
+.social{
+  color: rgb(174, 174, 174);
+  text-decoration: none;
+}
+
