--- a/LivroMente_FRONT/src/app/Views/home/home.component.html
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.html
@@ -2,18 +2,20 @@
 
 <main>
   <div class="page-top">
-    <p class="main-text">
-      Seus <span class="color">Livros Favoritos</span> Em Um Único
-      <span class="color">Lugar</span>
-    </p>
-    <p class="description">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi efficitur
-      metus quis mauris malesuada, quis iaculis augue vehicula. Maecenas ac nisl
-      eget elit bibend.
-    </p>
-    <div class="button-nav">
-      <button class="destaques">Destaques</button>
-      <button class="sale">Ofertas</button>
+    <div class="top-content">
+      <p class="main-text">
+        Seus <span class="color">Livros Favoritos</span> Em Um Único
+        <span class="color">Lugar</span>
+      </p>
+      <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi efficitur
+        metus quis mauris malesuada, quis iaculis augue vehicula. Maecenas ac nisl
+        eget elit bibend.
+      </p>
+      <div class="button-nav">
+        <button class="destaques">Destaques</button>
+        <button class="sale">Ofertas</button>
+      </div>
     </div>
     <img src="..\assets\reading_woman.png" alt="visual" />
   </div>
