--- a/LivroMente_FRONT/src/app/Views/home/home.component.css
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.css
@@ -8,25 +8,22 @@
 main {
   display: flex;
   flex-direction: column;
-  gap: 10em;
+  justify-content: center;
+  align-items: center;
+  gap: 5em;
   padding: 0px 150px 0px 150px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .page-top {
-  position: relative;
+  display: flex;
   margin: 2vw 0 0 0;
 }
 
 .page-top img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-  margin-top: 0;
-  width: 100%;
-  max-width: 500px;
+  width: 500px;
+  height: 460px;
 }
 
 .main-text {
