--- a/LivroMente_FRONT/src/app/Views/cadastro-livro/cadastro-livro.component.css
+++ b/LivroMente_FRONT/src/app/Views/cadastro-livro/cadastro-livro.component.css
@@ -1,18 +1,18 @@
-
-body{
+*{
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
-.menu{
+
+.menu {
   list-style-type: none;
   font-size: 20px;
   display: flex;
   justify-content: right;
   /* position: fixed; */
 }
-.menu ul{
+.menu ul {
   list-style-type: none;
   background-color: transparent;
   font-size: 20px;
@@ -20,44 +20,44 @@ body{
   justify-content: center;
 }
 
-.menu ul li{
+.menu ul li {
   display: inline;
 }
 
-.menu ul li a{
+.menu ul li a {
   color: #000;
   text-decoration: none;
   padding: 15px;
   display: inline-block;
 }
-.menu ul li a:hover{
-  color: #849A8A;
+.menu ul li a:hover {
+  color: #849a8a;
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
 }
 
-img.pequena{
+img.pequena {
   width: 7%;
   justify-content: left;
   cursor: pointer;
   transition: all 0.3s;
 }
 
-img.pequena:hover{
+img.pequena:hover {
   -webkit-filter: blur(2px);
   filter: blur(2px);
 }
 
-.bnt-login{
+.bnt-login {
   border-radius: 9px;
-  box-shadow: 0 3px 3px 0 rgba(0,0,0,0.2), 0 3px 3px 0 rgba(0,0,0,0.19);
-  border: 5px solid rgba(132, 154, 138, 0.20);
-  background: #849A8A;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.19);
+  border: 5px solid rgba(132, 154, 138, 0.2);
+  background: #849a8a;
   font-size: 20px;
   color: #fff;
   cursor: pointer;
-  margin:49px 30px 30px;
+  margin: 49px 30px 30px;
   margin-top: 5px;
   padding: 7px;
 }
@@ -65,21 +65,165 @@ img.pequena:hover{
   background-color: rgb(136, 197, 138);
 }
 
-.form-upload{
-  text-align: center;
-  padding: 15px;
-  width: 350px;
-  margin-left: 30px;
-  margin-top: 20px;
-  border-radius: 33px;
-  background: #f8f7f7;
-  box-shadow:  20px 20px 60px #0e010118,
-           -20px -20px 60px #0a01011a;
+.page-top {
+  display: flex;
+  width: 55em;
+  height: 20em;
+  gap: 50px;
 }
 
-img{
-  width: 100%;
-  height:100%;
-  justify-content: left;
- 
+.img {
+  width: 90%;
 }
+
+.img img {
+  width: 125%;
+  height: 135%;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  gap: 20px;
+}
+
+.main-text {
+  font-size: 40px;
+  line-height: 40px;
+}
+
+.description {
+  text-align: justify;
+  letter-spacing: 1px;
+  line-height: 14px;
+  font-size: 13px;
+}
+
+h1 {
+  color: #82a8d9;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+  justify-content: center;
+}
+
+.color{
+  color:#849a8a;
+  font-weight: 600;
+}
+
+.container{
+  max-width: 700px;
+  width: 100%;
+  background: #6a7b6f69;
+  padding: 25px 30px;
+  border-radius: 12px;
+}
+
+.container .title{
+  font-size: 25px;
+  font-weight: 600;
+  position: relative;
+}
+.container .title::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 50px;
+  background:#4f5d53;
+}
+
+.container form .user-details{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+form .user-details .input-box{
+  margin: 20px 0 12px 0 ;
+  width: calc(100% / 2 - 20px);
+}
+
+.user-details .input-box details{
+  display: block;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.user-details .input-box input{
+  height: 45px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 13px;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+.user-details .input-box input:focus,
+.user-details .input-box input:valid{
+  border-color: #303536;
+}
+
+form .button{
+  height: 45px;
+  margin: 45px 0;
+  cursor: pointer;
+}
+form .button input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  color: #000000;
+  border: none;
+  -webkit-border-radius:0px 30px 0px 30px;
+  background:#768b7c;
+  font-size: 20px;
+  font-weight: 600;
+}
+form .button input:hover{
+  background: linear-gradient(135deg, #718376, #4a584e,#bcdbc5 );
+  color: #fff;
+}
+
+@media (max-width: 584px){
+  .container{
+    max-width: 100%;
+  }
+  form .user-details .input-box{
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .container form .user-details{
+    max-height:300px ;
+    overflow-y: scroll;
+  }
+  .user-details::-webkit-scrollbar{
+    width: 0;
+  }
+}
+
+select{
+  height: 35px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 13px;
+}
+
