--- a/LivroMente_FRONT/src/app/Views/detail/detail.component.html
+++ b/LivroMente_FRONT/src/app/Views/detail/detail.component.html
@@ -33,4 +33,50 @@
             </div>
         </div>
     </div>
+    <div class="general-product">
+        <div class="seller-profile">
+            <img class="profile-picture" src="./assets/teste.jpg" alt="">
+            <div class="user-info">
+                <span class="username">José M. Ribeiro</span>
+                <span class="star-rate">5,0 XXXXXX</span>  
+            </div>
+            <button class="follow">SEGUIR</button>
+            <button class="report">DENUNCIAR</button>
+        </div>
+        <div class="product-title">
+            <span class="category-title">Você também pode gostar</span>
+            <div class="product">
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="./assets/teste.jpg" alt="">
+                    </div>
+                    <div class="card-info">
+                        <a href="" class="product-name">Nomeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</a>
+                        <span>XXXX</span>
+                        <p class="product-price">R$30,00</p>
+                        <!-- <button class="card-btn-buy">COMPRAR</button> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="product">
+            <span class="title">Produtos Relacionados</span>
+            <div class="product-display">
+                <ng-container *ngFor="let product of products">
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img src="./assets/teste.jpg" alt="" class="image">
+                        </div>
+                        <div class="product-tag">
+                            <div class="product-text">
+                                <span class="product-name">{{product.name}}</span>
+                                <span class="product-price">{{product.price}}</span>
+                            </div>
+                            <button class="buy-button">ADICIONAR O CARRINHO</button>
+                        </div>
+                    </div>
+                </ng-container>
+            </div>
+        </div> -->
+    </div>
 </main>
