--- a/LivroMente_FRONT/src/app/Views/home/home.component.css
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 main {
   display: flex;
   flex-direction: column;
@@ -110,306 +109,192 @@ main {
   color: #849a8a;
 }
 
-.product-category {
-  color: #000;
-  font-size: 24px;
-  font-style: normal;
+.page-mid{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 2em;
+}
+
+.product-selection{
+  width: clamp(400px, 100%, 100%);
+  height: 100%;
+}
+
+.product-slider{
+  display: flex;
+  flex-direction: column;
+  width: 59em;
+  height: 350px;
+}
+
+.slider-title{
+  color: black;
   font-weight: 700;
-  line-height: normal;
+  font-size: 23px;
+  margin-bottom: 10px;
 }
 
-.product {
-  margin: 10px -8px;
-  /* padding: 0 0; */
-}
-
-.slider-wrap {
-  position: relative;
-  overflow: hidden;
-  height: 300px;
-  margin-bottom: -40px;
-}
-
-.slider-main {
+.product{
   display: flex;
-  position: absolute;
+  overflow: hidden;
+  gap: 2em ;
 }
 
-.slider-fade {
-  z-index: 1;
-  position: absolute;
-  right: -30px;
-  width: 100px;
-  height: 500%;
-  top: -30px;
-  background: linear-gradient(to right, rgb(255, 255, 255), white);
-  filter: blur(15px);
-}
-
-.item {
-  position: relative;
-  width: 180px;
+.product-card{
   height: 300px;
-  background-color: #d9d9d9;
-  position: relative;
-  margin: 0 8px;
+  min-width: 200px;
   border-radius: 7px;
-  margin-bottom: 2vh;
-  border-radius: 4px;
-  border: 1.2px solid rgb(194, 194, 194);
-  overflow: hidden;
+  background-color: rgb(240, 239, 239);
+  border: 1px solid rgb(186, 186, 186);
 }
 
-.item .product-image {
-  top: 0;
-  position: relative;
-  height: 240px;
+.product-slider-image{
+  background-color: rgb(240, 239, 239);
+  height: 77%;
+  border-radius: 7px 7px 0 0;
 }
 
-.product-info {
-  min-width: 100%;
-  min-height: 10vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 10vh;
-  background-color: #ffffff;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.product-text {
-  margin-left: 0.5vw;
-}
-
-.product-buy {
-  margin-right: 0.5vw;
-  height: 70%;
-  width: 40%;
-  border-radius: 5px;
-  border: 1px solid;
-  background-color: #849a8a;
-  color: white;
-  font-weight: 600;
-}
-
-.prev {
-  position: absolute;
-  left: 30px;
-  top: 40%;
-  transform: translate(-50%, -50%);
-}
-
-.next {
-  cursor: pointer;
-  background: none;
-  border: none;
-  overflow: visible;
-  position: absolute;
-  right: 10px;
-  top: 35%;
-  transition: 0.09s;
-  width: 25px;
-  height: 20px;
-  z-index: 2;
-}
-
-.next:active {
-  transform: scale(0.9);
-}
-
-.next img {
+.product-slider-image img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
+}
+
+.product-info{
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  background-color: rgb(255, 255, 255);
+  height: 23%;
+  border-radius: 0 0 7px 7px;
+  padding: 2px 10px;
+}
+
+.product-card-name{
+  color: black;
+  font-weight: 700;
+  text-decoration: none;
+  word-wrap: break-word;
+}
+
+.product-card-name:hover{
+  color: rgb(255, 174, 0);
+}
+
+.product-rate{
+  font-size: 10px;
+  color: #616161;
+  font-weight: 500;
+}
+
+.product-card-price{
+  font-size: 20px;
+  color: #849a8a;
+  font-weight: 700;
 }
 
 .offer-card {
   display: flex;
+  width: 100%;
 }
 
 .left-card {
   border-radius: 14px;
   width: 75%;
-  height: 35vh;
+  height: 13em;
   border: 1px solid rgb(0, 0, 0);
   overflow: hidden;
 }
-
-/* .left-card img {
-    right: -100px;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  } */
 
 .right-card {
   border-radius: 14px;
   margin: 0 0 0 12px;
   width: 25%;
-  height: 35vh;
+  height: 13em;
   outline: 1px solid rgb(0, 0, 0);
 }
 
-.general-products {
- display: flex;
- gap: 127px;
+.product-filter{
+  display: flex;
+  width: 58em;
+  margin-bottom: 15em;
 }
 
-.filter {
-  /* padding: 0 7vw 0 0; */
+.general-text{
+  font-size: 30px;
+  font-weight: 700;
 }
 
-.general-books-title {
-  margin: 7vh 0 2vh 0;
-  color: #000;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
+.main-filter-body{
+  display: flex;
 }
 
-.category {
+.filter{
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 58em;
+}
+
+.filter-checkbox{
+  width: 20em;
+}
+
+.filter-name{
+  color: black;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.filter-option, .filter-range{
   display: flex;
   flex-direction: column;
 }
 
-.category-title {
-  color: #000;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin: 2vh 0 0 0;
+.range-title{
+  color: black;
+  font-size: 25px;
+  font-weight: 700;
 }
 
-.category-input {
+.range-input{
   display: flex;
   flex-direction: column;
+  width: 120px;
 }
 
-.category-text-class {
-  margin: 0.5vw;
-}
-
-.categorys {
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border: 1px solid #000000;
-  background-color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.categorys:checked {
-  background-color: rgb(0, 0, 0);
-}
-
-.category-design {
+.product-filter-display{
+  height: auto;
+  width: 700px;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 1em;
 }
 
-.products-general {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  padding-top: 6.5em;
-  /* padding: 7vw 0 0 0; */
-}
-
-.item-general {
-  position: relative;
-  width: 210px;
-  height: 320px;
-  background-color: #d9d9d9;
-  position: relative;
-  margin: 0 8px;
+.product-filter-card{
+  width: 200px;
+  height: 290px;
+  background-color: rgb(240, 239, 239);
   border-radius: 7px;
-  margin-bottom: 2vh;
-  border-radius: 4px;
-  border: 1.2px solid rgb(194, 194, 194);
-  overflow: hidden;
+  border: 1px solid  rgb(186, 186, 186);
 }
 
-.item-general .product-info {
-  position: relative;
+.product-filter-card-image{
   width: 100%;
-  height: 30px;
-  bottom: 0;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.product-image {
-  top: 0;
-  position: relative;
-  height: 260px;
+  height: 220px;
 
   & img{
-    height: 100%;
     width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 }
 
-/* 
-.product-image img{
+.product-filter-card-info{
+  background-color: white;
   width: 100%;
-  object-fit: cover;
-  box-sizing: border-box;
-} */
-
-.page-footer{
-  padding: 2vw 3vw 2vw 3vw;
-  display: flex;
-  margin: 56vh 0 0 0;
-  background-color: #000000;
-  width: 100%;
-  height: 25vh;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 68px;
+  border-radius: 0 0 7px 7px;
+  padding: 0 7px;
 }
-
-.footer-left{
-  display: flex;
-  gap: 3em  ;
-  width: 50vw;
-}
-
-.footer-resources-title{
-  margin: 0;
-  color: rgb(174, 174, 174);
-  font-weight: 600;
-}
-
-.footer-resources{
-  display: flex;
-  flex-direction: column;
-  color:rgb(174, 174, 174);
-  margin: 0;
-  font-size: 12px;
-}
-
-.resources{
-  color: rgb(174, 174, 174);
-  text-decoration: none;
-}
-
-.resources:hover{
-  color: rgb(255, 255, 255);
-  transition: .3s;
-}
-
-.footer-right{
-  color: white;
-  display: flex;
-  justify-content: flex-end;
-  gap: 1em;
-  width: 50vw;
-}
-
-.social{
-  color: rgb(174, 174, 174);
-  text-decoration: none;
-}
-
