--- a/LivroMente_FRONT/src/app/Views/home/home.component.css
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.css
@@ -15,6 +15,8 @@ main {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+/* PARTE DO TOPO DA PÁGINA */
+
 .page-top {
   display: flex;
   margin: 2vw 0 0 0;
@@ -109,12 +111,16 @@ main {
   color: #849a8a;
 }
 
+/* MEIO DA PÁGINA */
+
 .page-mid{
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 58em;
   gap: 2em;
 }
+
+/* SLIDERS DE PRODUTOS */
 
 .product-selection{
   width: clamp(400px, 100%, 100%);
@@ -194,6 +200,8 @@ main {
   font-weight: 700;
 }
 
+/* CARD DE OFERTA MEIO DA PÁGINA */
+
 .offer-card {
   display: flex;
   width: 100%;
@@ -214,6 +222,8 @@ main {
   height: 13em;
   outline: 1px solid rgb(0, 0, 0);
 }
+
+/* FILTRO DE PRODUTOS & PRODUTOS GERAIS */
 
 .product-filter{
   display: flex;
@@ -298,3 +308,7 @@ main {
   border-radius: 0 0 7px 7px;
   padding: 0 7px;
 }
+
+/* MEDIA QUERIES */
+
+
