--- a/LivroMente_FRONT/src/app/Views/cadastro-livro/cadastro-livro.component.html
+++ b/LivroMente_FRONT/src/app/Views/cadastro-livro/cadastro-livro.component.html
@@ -55,81 +55,110 @@
   </div>
   <div class="container">
     <div class="title">Cadastrar Livros</div>
-    <form action="modal">
+    <form action="modal"  (ngSubmit)="postBook()" #form="ngForm">
       <div class="user-details">
         <div class="input-box">
           <span class="details">Título:</span>
-          <input type="text" placeholder="Digite o nome do livro" required />
+          <input 
+            type="text" 
+            placeholder="Digite o nome do livro"
+            name="Title"
+            [(ngModel)]="book.Title" required />
         </div>
         <div class="input-box">
           <span class="details">Autor:</span>
-          <input type="text" placeholder="Digite o nome do autor " required />
+          <input 
+            type="text" 
+            placeholder="Digite o nome do autor "
+            name="Author" 
+            [(ngModel)]="book.Author" 
+            required />
         </div>
         <div class="input-box">
           <span class="details">Sinopse:</span>
-          <input type="text" placeholder="Escreva uma breve sinopse" required />
+          <input 
+            type="text" 
+            placeholder="Escreva uma breve sinopse" 
+            name="Synopsis" 
+            [(ngModel)]="book.Synopsis" required />
         </div>
         <div class="input-box">
           <span class="details">Quantidade:</span>
           <input
-            type="text"
+            type="number" step="1"
             placeholder="Digite a quantidade de livros"
+            name="Quantity" 
+            [(ngModel)]="book.Quantity"
             required
           />
         </div>
         <div class="input-box">
           <span class="details">Número de páginas:</span>
           <input
-            type="text"
+            type="number" step="1"
             placeholder="Digite o número das páginas"
+            name="Pages" 
+            [(ngModel)]="book.Pages"
             required
           />
         </div>
         <div class="input-box">
           <span class="details">Editora:</span>
-          <input type="text" placeholder="Digite o nome da editora" required />
+          <input
+            type="text" 
+            placeholder="Digite o nome da editora"
+            name="PublishingCompany" 
+            [(ngModel)]="book.PublishingCompany"
+            required />
         </div>
         <div class="input-box">
           <span class="details">Valor:</span>
-          <input type="text" placeholder="Digite o valor do livro" required />
+          <input 
+            type="number" 
+            step="0.01" 
+            placeholder="Digite o valor do livro" 
+            name="Value" 
+            [(ngModel)]="book.Value" 
+            required />
         </div>
         <div class="input-box">
           <span class="details">Idioma:</span>
-          <input type="text" placeholder="Digite o idioma" required />
+          <input 
+            type="text" 
+            placeholder="Digite o idioma"
+            name="Language"  
+            [(ngModel)]="book.Language" 
+            required />
         </div>
         <div class="input-box">
           <span class="details">Classificação indicativa</span>
           <input
-            type="text"
+            type="number"
             placeholder="Digite a faixa etária do livro"
+            name="Classification" 
+            [(ngModel)]="book.Classification"
             required
           />
         </div>
-        <div class="input-box">
+        <!-- <div class="input-box">
           <span class="details">Estado do livro:</span>
           <select name="estado" id="estado">
             <option value="1">Novo</option>
             <option value="2">Usado</option>
           </select>
-        </div>
+        </div> -->
         <div class="input-box">
-          <span class="details">Gênero do livro:</span>
-          <select name="genero" id="genero">
-            <option value="1">Romance</option>
-            <option value="2">Fantasia</option>
-            <option value="3">Thiller</option>
-            <option value="4">Ficção</option>
-            <option value="5">Mistério</option>
-            <option value="6">Infantil</option>
-            <option value="7">Drama</option>
-          </select>
+           <span class="details">Gênero do livro:</span>
+           <select name="genero" [(ngModel)]="book.CategoryId"  >
+             <option  *ngFor="let categoria of categories"  [value]="categoria.id">{{categoria.description}}</option>
+           </select>
         </div>
         <div class="button">
-          <!-- <input type="file" (change)="onFileSelected($event)" value="Capa">
-          <button (click)="uploadFile()">Upload</button> -->
+          <input type="file" (change)="onFileSelected($event)" value="Capa">
+          <!-- <button (click)="uploadFile()">Upload</button> -->
         </div>
       </div>
-      <div class="button">
+      <div class="button" >
         <input type="submit" value="Cadastrar">
       </div>
     </form>
