--- a/LivroMente_FRONT/src/app/Views/carrinho/carrinho.component.html
+++ b/LivroMente_FRONT/src/app/Views/carrinho/carrinho.component.html
@@ -63,7 +63,7 @@
                     </div>
                     <footer></footer>
                 </div>
-                <button class="box-button">Finalizar Compra</button>
+                <a href="pagamento"><button class="box-button">Finalizar Compra</button></a>
             </aside>
             </div>
         </main>
