--- a/LivroMente_FRONT/src/app/Views/detail/detail.component.css
+++ b/LivroMente_FRONT/src/app/Views/detail/detail.component.css
@@ -69,6 +69,10 @@ h1 {
   margin-top: 15px;
 }
 
+.quantity-box{
+  width: 40px;
+}
+
 label {
   font-size: 20px;
 }
@@ -84,6 +88,8 @@ select selected {
 }
 
 .product-info p {
+  width: 100%;
+  height: 100px;
   margin-top: 20px;
   text-align: justify;
 }
