--- a/LivroMente_FRONT/src/app/Views/detail/detail.component.html
+++ b/LivroMente_FRONT/src/app/Views/detail/detail.component.html
@@ -1,35 +1,30 @@
 <app-header></app-header>
 
 <main>
-    <div class="product-display">
+    <div class="product-display" *ngIf="Book">
         <div class="product-image">
             <div class="side-view">
-                <img class="image-view" src="./assets/teste.jpg" alt="livro">
-                <img class="image-view" src="./assets/teste.jpg" alt="livro">
-                <img class="image-view" src="./assets/teste.jpg" alt="livro">
-                <img class="image-view" src="./assets/teste.jpg" alt="livro">
+                <img class="image-view" src="{{Book.urlImg}}" alt="livro">
+                <img class="image-view" src="{{Book.urlImg}}" alt="livro">
+                <img class="image-view" src="{{Book.urlImg}}" alt="livro">
+                <img class="image-view" src="{{Book.urlImg}}" alt="livro">
             </div>
-            <img class="main-image" src="./assets/teste.jpg" alt="livro">
+            <img class="main-image" src="{{Book.urlImg}}" alt="livro">
         </div>
         <div class="product-info">
-            <h1>Derego do tchego birigo do tigo</h1>
-            <span>por <span class="seller">Saraiva</span></span>
+            <h1>{{Book.title}}</h1>
+            <span>por <span class="seller">{{Book.author}}</span></span>
             <div class="price-quantity">
-                <span class="price">R$100,00</span>
+                <span class="price">R${{Book.value}}</span>
                 <div class="input-quantity">
-                    <label for="quantity-dropdown">Qtd.</label>
-                    <select name="quantity-dropdown" id="quantity-dropdown">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="5">5</option>
-                        <option value="10">10</option>
-                    </select>
+                    <label for="quantity">Qtd.</label>
+                    <input class="quantity-box" type="number" id="quantity" min="0" max="{{Book.quantity}}">
                 </div>
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea inventore cum officia animi commodi incidunt nesciunt quasi cupiditate sunt nobis ab perferendis expedita laborum eius veniam culpa esse, quos libero?</p>
+            <p>{{Book.synopsis}}</p>
             <div class="option-button">
-                <button class="add-to-cart">ADICIONAR AO CARRINHO</button>
-                <button class="buy">COMPRAR</button>
+                <button class="add-to-cart">Adicionar ao Carrinho</button>
+                <button class="buy">Comprar</button>
             </div>
         </div>
     </div>
@@ -38,7 +33,7 @@
             <img class="profile-picture" src="./assets/teste.jpg" alt="">
             <div class="user-info">
                 <span class="username">José M. Ribeiro</span>
-                <span class="star-rate">5,0 XXXXXX</span>  
+                <span class="star-rate">5,0 XXXXXX</span>
             </div>
             <button class="follow">SEGUIR</button>
             <button class="report">DENUNCIAR</button>
@@ -46,14 +41,14 @@
         <div class="product-title">
             <span class="category-title">Você também pode gostar</span>
             <div class="product">
-                <div class="product-card">
+                <div class="product-card" *ngFor="let Book of Books">
                     <div class="card-image">
-                        <img class="image" src="./assets/teste.jpg" alt="">
+                        <img class="image" src="{{Book.urlImg}}" alt="">
                     </div>
                     <div class="card-info">
-                        <a href="" class="product-name">Nomeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</a>
-                        <span>XXXX</span>
-                        <p class="product-price">R$30,00</p>
+                        <a href="" class="product-name" abrirProduto>{{Book.title}}</a>
+                        <span>5,0 <svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg></span>
+                        <p class="product-price">R${{Book.value}}</p>
                         <!-- <button class="card-btn-buy">COMPRAR</button> -->
                     </div>
                 </div>
